<resources>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="app_name">蚂蚁捡友</string>
    <string name="message_notice">消息提醒</string>
    <string name="message_record">消息记录</string>
    <string name="pullset">推送设定</string>
    <string name="message_record_ins">关闭软件后自动清除消息记录</string>
    <string name="ifallow_pull">允许推送活动信息</string>
    <string name="changepsd">账户密码</string>
    <string name="txetchange">修改</string>
    <string name="phonenumber">绑定的手机号</string>
    <string name="email">邮箱</string>
    <string name="textaccount">账号</string>
    <string name="edittextaccount">请输入账号</string>
    <string name="textpassword">密码</string>
    <string name="edittextpassword">请输入密码</string>
    <string name="login">立即登录</string>
    <string name="phone_fast">手机快捷登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register">注册</string>
    <string name="login_agree">登录即代表已阅读并同意蚂蚁捡友</string>
    <string name="softwareservice">《服务协议》</string>
</resources>
