<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">
    <ImageView
        android:layout_width="@dimen/new_250px"
        android:layout_height="@dimen/new_250px"
        android:src="@mipmap/icon_logo"
        android:layout_marginTop="@dimen/new_189px"
        android:layout_gravity="center_horizontal"
        tools:ignore="MissingConstraints" />
    <!--<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textaccount"
        android:drawableLeft="@mipmap/icon_mobile"
        android:layout_marginStart="@dimen/new_137px"
        android:layout_marginTop="@dimen/new_228px"
        android:textColor="@color/c777777"
        android:textSize="@dimen/new_48px"
/>


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/new_137px"
        android:layout_marginTop="@dimen/new_6px"
        android:layout_marginEnd="@dimen/new_137px"
        android:hint="@string/edittextaccount"
        android:textColorHint="@color/cccccc"
        android:textSize="@dimen/new_36px"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/new_49px"
       >
    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textpassword"
        android:layout_marginStart="@dimen/new_137px"
        android:textColor="@color/c777777"
        android:textSize="@dimen/new_48px"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/new_137px"
        android:layout_below="@id/tv_password"
        android:layout_marginTop="@dimen/new_6px"
        android:layout_marginEnd="@dimen/new_137px"
        android:hint="@string/edittextpassword"
        android:textColorHint="@color/cccccc"
        android:textSize="@dimen/new_36px"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password" />

       <Button
           android:id="@+id/password_switch"
           android:layout_width="@dimen/new_39px"
           android:layout_height="@dimen/new_19px"
           android:background="@mipmap/icon_pass_open"
           android:layout_alignParentRight="true"
           android:layout_marginRight="@dimen/new_137px"
           android:layout_below="@id/tv_password"
           android:layout_marginTop="@dimen/new_45px"/>
   </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_122px"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/new_137px"
        android:layout_marginTop="@dimen/new_90px"
        android:layout_marginEnd="@dimen/new_137px"
        android:background="@drawable/bt_login_button"
        android:enabled="true"
        android:text="@string/login"
        android:textColor="@color/cFFFFFF"
        android:textSize="@dimen/new_48px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/new_137px"
        android:layout_marginTop="@dimen/new_63px"
        android:layout_marginEnd="@dimen/new_137px"
        >
        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/c777777"
            android:textSize="@dimen/new_42px"
            />
        <TextView
            android:id="@+id/tv_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/c777777"
            android:textSize="@dimen/new_42px"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_fast"
        android:layout_marginStart="@dimen/new_137px"
        android:layout_marginTop="@dimen/new_57px"
        android:layout_marginEnd="@dimen/new_137px"
        android:layout_gravity="right"
        android:textColor="@color/c00AC38"
        android:textSize="@dimen/new_42px"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/new_137px"
        android:layout_marginTop="@dimen/new_84px"
        android:layout_marginEnd="@dimen/new_137px"
        >
        <ImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/new_96px"
            android:src="@mipmap/icon_wechat"
            />
        <ImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/new_96px"
            android:src="@mipmap/icon_qq"
            />
        <ImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/new_96px"
            android:src="@mipmap/icon_sina"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/new_96px"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_agree"
            android:textSize="@dimen/new_32px"
            android:textColor="@color/cAAAAAA"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/softwareservice"
            android:textColor="@color/c00AC38"
            android:textSize="@dimen/new_32px"
            />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</LinearLayout>