<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_54per"
    tools:context=".mine.SettingActivity">
    <!--switch-->
    <include
        android:id="@+id/ic_"
        layout="@layout/header_bar" />
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="@dimen/new_160px"
       android:gravity="center_vertical"
       android:layout_marginTop="@dimen/new_37px"
       >
       <TextView
           android:id="@+id/tv_message"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/new_48px"
           android:textColor="@color/mine"
           android:layout_marginLeft="@dimen/activity_vertical_margin"
           android:text="个人资料"
           tools:ignore="MissingConstraints" />

       <TextView
           android:id="@+id/tv_changemessage"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:layout_marginRight="@dimen/activity_vertical_margin"
           android:text="@string/txetchange"
           android:textSize="@dimen/new_42px"
           android:textColor="@color/theme_color_green"
           tools:ignore="MissingConstraints" />
   </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="@dimen/new_160px"
        android:layout_marginTop="@dimen/new_37px"
        >
        <TextView
            android:id="@+id/tv_message_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/new_48px"
            android:textColor="@color/mine"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:text="@string/message_notice"
            tools:ignore="MissingConstraints" />

        <Switch
            android:id="@+id/switch_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
           android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:textOn=""
            android:textOff=""
            android:thumb="@drawable/thumb"
            android:track="@drawable/track"
            tools:ignore="MissingConstraints" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_160px"
        android:layout_marginTop="@dimen/new_3px"
        >
        <TextView
            android:id="@+id/tv_message_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:text="@string/message_record"
            android:textSize="@dimen/new_48px"
            android:textColor="@color/mine"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_message_zhushi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/message_record_ins"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/switch_record"
            tools:ignore="MissingConstraints" />

        <Switch
            android:id="@+id/switch_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:textOn=""
            android:textOff=""
            android:thumb="@drawable/thumb"
            android:track="@drawable/track"
            tools:ignore="MissingConstraints" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_160px"
        android:layout_marginTop="@dimen/new_3px"
        >
        <TextView
            android:id="@+id/tv_pullset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:text="@string/pullset"
            android:textSize="@dimen/new_48px"
            android:textColor="@color/mine"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_message_pull_zhushi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ifallow_pull"
            android:layout_toLeftOf="@+id/switch_pullset"
            tools:ignore="MissingConstraints" />

        <Switch
            android:id="@+id/switch_pullset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:textOn=""
            android:textOff=""
            android:thumb="@drawable/thumb"
            android:track="@drawable/track"
            tools:ignore="MissingConstraints" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_160px"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/new_37px"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:text="@string/changepsd"
            android:textSize="@dimen/new_48px"
            android:textColor="@color/mine"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_changepass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_alignParentRight="true"
            android:textColor="@color/theme_color_green"
            android:text="@string/txetchange"
            android:textSize="@dimen/new_42px"
            tools:ignore="MissingConstraints" />
    </RelativeLayout>



    <!--other-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_160px"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/new_3px"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:text="@string/phonenumber"
            android:layout_centerVertical="true"
            android:textSize="@dimen/new_48px"
            android:textColor="@color/mine"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_phonenumberbind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="135****4368"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tv_change_phone"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_change_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/theme_color_green"
            android:text="变更"
            android:layout_centerVertical="true"
            android:textSize="@dimen/new_42px"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            tools:ignore="MissingConstraints" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_160px"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/new_3px"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:text="@string/email"
            android:layout_centerVertical="true"
            android:textSize="@dimen/new_48px"
            android:textColor="@color/mine"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="135****4368@163.com"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tv_change_email"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_change_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/theme_color_green"
            android:text="绑定"
            android:textSize="@dimen/new_42px"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            tools:ignore="MissingConstraints" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ll_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_160px"
        android:background="@color/white"
        android:layout_marginTop="@dimen/new_46px"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="退出登录"
            android:textColor="@color/title_color"
            android:textSize="@dimen/new_50px"
            />
    </LinearLayout>
</LinearLayout>